--- a/SMLRcam/SMLRcam/Flux-Info.plist
+++ b/SMLRcam/SMLRcam/Flux-Info.plist
@@ -33,6 +33,10 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>location-services</string>
+		<string>gps</string>
+		<string>accelerometer</string>
+		<string>opengles-2</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
