--- a/SMLRcam/SMLRcam/Flux-Info.plist
+++ b/SMLRcam/SMLRcam/Flux-Info.plist
@@ -38,6 +38,10 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
