--- a/SMLRcam/Podfile
+++ b/SMLRcam/Podfile
@@ -1,3 +1,7 @@
 platform :ios, '5.0'
 
-pod 'IDMPhotoBrowser'pod 'RestKit', '~> 0.20.0'
+pod 'IDMPhotoBrowser'
+
+pod 'RestKit', '~> 0.20.0'
+
+pod 'HMSegmentedControl', '~> 1.2.0'
