--- a/SMLRcam/SMLRcam/Flux-Info.plist
+++ b/SMLRcam/SMLRcam/Flux-Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>4</string>
+	<string>5</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
@@ -49,5 +49,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AKKURAT.ttf</string>
+		<string>AKKURATB.ttf</string>
+	</array>
 </dict>
 </plist>
