adds re-built settings panel, bug fix on Twitter contact import

--- a/SMLRcam/SMLRcam/Flux-Info.plist
+++ b/SMLRcam/SMLRcam/Flux-Info.plist
@@ -51,6 +51,7 @@
 	<array>
 		<string>AKKURAT.ttf</string>
 		<string>AKKURATB.ttf</string>
+		<string>AKKURATL.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array/>
