--- a/SMLRcam/SMLRcam/Flux-Info.plist
+++ b/SMLRcam/SMLRcam/Flux-Info.plist
@@ -34,7 +34,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>08a</string>
+	<string>09</string>
 	<key>FacebookAppID</key>
 	<string>562834287134123</string>
 	<key>FacebookDisplayName</key>
